[package]
name = "ha-addon-piresence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.16.0"
url = "2.2.2"
env_logger = "0.9.0"
#hass-rs = { version = "0.2", features = ["async-std-runtime"] }
