[package]
name = "haevlo"
version = "0.1.0"
edition = "2021"
description = """\
    Home Assistant EVent LOgger, a tool to record streams of events from Home Assistant \
    via WebSockets. It is helpful in generating test cases from real-world data.
    """

[dependencies]
hass = { path = "../hass" }
clap = { version = "3.1.2", features = ["derive"] }
#ctrlc = { version = "3.0", features = ["termination"] }
tokio = { version = "1.17", features = ["full"] }
tracing = { version = "0.1.32", features = ["log"] }
tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }
