[package]
authors = ["R. Traverso"]
name = "hass"
version = "0.1.0"
edition = "2021"
autobins = false
description = "Asynchronous interaction with Home Assistant"

[[bin]]
name = "hast"
path = "src/bin/hast.rs"
required-features = ["hast-bin"]

[[bin]]
name = "haevlo"
path = "src/bin/haevlo.rs"
required-features = ["haevlo-bin"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
tokio = { version = "1.17", features = ["full"] }
tokio-tungstenite = "0.17"
tracing = { version = "0.1.32", features = ["log"] }
tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }
url = "2.2.2"

# Optional deps
clap = { version = "3.1", features = ["derive"], optional = true }
serde_yaml = {version = "0.8", optional = true }

[dev-dependencies]
tracing-test = { version = "0.2.1" }

[features]
default = []
haevlo-bin = ["serde_yaml", "dep:clap"]
hast-client = []
hast-server = ["hast-client", "serde_yaml"]
hast-bin = ["hast-server", "dep:clap"]
serde_yaml = ["dep:serde_yaml"]