[package]
name = "hast"
version = "0.1.0"
edition = "2021"

[dependencies]
hass = { path = "../hass", features = ["serde_yaml"] }
clap = { version = "3.1.2", features = ["derive"] }
tokio = { version = "1.17", features = ["full"] }
tokio-tungstenite = "0.17"
tracing = { version = "0.1.32", features = ["log"] }
tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }
futures-util = "0.3"
