[package]
name = "piresence"
version = "0.1.0"
edition = "2021"
description = """\
    An add-on for Home Assistant that provides room presence detection services \
    via motion sensors. \
    """

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hass = { path = "../hass" }
clap = { version = "3.1.2", features = ["derive"] }
