[package]
name = "piresence"
version = "0.1.0"
edition = "2021"
description = """\
    An add-on for Home Assistant that provides room presence detection services \
    via motion sensors. \
    """

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hass = { path = "../hass" }
clap = { version = "3.1.2", features = ["derive"] }
tokio = { version = "1.17", features = ["full"] }
tracing = { version = "0.1.32", features = ["log"] }
tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }
