[package]
authors = ["R. Traverso"]
name = "piresence"
version = "0.1.0"
edition = "2021"
description = """
An add-on for Home Assistant that provides room presence detection services
via motion sensors.
"""

[dependencies]
hass = { path = "../hass", default-features = false, features = [] }
clap = { version = "3.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

[dev-dependencies]
tracing-test = { version = "0.2" }